--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,72 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ *= require milligram
  *= require_self
  */
+
+ body  {
+   background-color: #ecf0f1;
+   margin: 0px;
+ }
+
+ .centered {
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   /* bring your own prefixes */
+   transform: translate(-50%, -50%);
+ }
+
+ .navbar {
+     list-style-type: none;
+     margin-bottom: 20px;
+     padding: 0;
+     overflow: hidden;
+     background-color: #333;
+ }
+
+ .navbar-item {
+     float: left;
+ }
+
+ .navbar-item a {
+     display: block;
+     color: white;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+ }
+
+ .navbar-item-right a {
+     display: block;
+     color: white;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+ }
+
+ .navbar-item-right {
+    float: right;
+ }
+
+ .navbar-title {
+     display: block;
+     color: white;
+     text-align: center;
+     padding: 14px 16px;
+     text-decoration: none;
+     font-weight: bolder;
+ }
+
+ .navbar-item a:hover {
+     background-color: #111;
+ }
+
+ .navbar-item-right a:hover {
+     background-color: #111;
+ }
+
+ .active {
+    background-color: #4CAF50;
+}
