--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,6 +5,9 @@
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
         .field
+          = f.label :name
+          = f.text_field :name
+        .field
           = f.label :email
           = f.email_field :email, autofocus: true
         .field
