--- a/app/views/games/default.haml
+++ b/app/views/games/default.haml
@@ -1,5 +1,4 @@
-- if current_user
-  = "Hello #{current_user.name}"
-  = link_to "Logout", destroy_user_session_path, :method => :delete
-- else
-  = link_to "Login", new_user_session_path
+.title
+  FIFA Statistics Tracker
+.subtitle
+  Tracking your games and points has never been easier
