--- a/app/views/games/_form.haml
+++ b/app/views/games/_form.haml
@@ -11,7 +11,7 @@
   .field
     = f.label :winner
     .dropdown
-      = f.select :winner, options_for_select(User.name_list,  {:class => "navbar-dropdown-content"}), :include_blank => "Select player"
+      = f.select :winner, options_for_select(""), :include_blank => "Select player"
   .field
     = f.label :home_user
     .dropdown
