Add approving capabilities

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,6 +24,8 @@
           = link_to "Games", games_path
         .navbar-item
           = link_to "Table", table_path
+        .navbar-item
+          = link_to "Review", review_path
       - else
         .navbar-item-right
           .navbar-item
