--- a/app/views/games/table.haml
+++ b/app/views/games/table.haml
@@ -7,6 +7,7 @@
         %th Name
         %th Wins
         %th Losses
+        %th Ties
         %th Points
         %th Points/Game
         %th Goals For
@@ -24,6 +25,8 @@
             = stats[:games_won]
           %td
             = stats[:games_lost]
+          %td
+            = stats[:ties]
           %td
             = stats[:points]
           %td
