Finish adding validations and presorting of table

--- a/app/views/games/_form.haml
+++ b/app/views/games/_form.haml
@@ -37,4 +37,4 @@
     .dropdown
       = f.number_field :away_penalty_score, :value => 0, :min => 0, :max => 14
   .field
-    = f.submit
+    = f.submit "Submit Game", :id => "submit"
