--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -1,42 +1,43 @@
 .container
   %h1
     Games
-  %table
-    %thead
-      %tr
-        %th id
-        %th Winner
-        %th Home Player
-        %th Away Player
-        %th Home Score
-        %th Away Score
-        %th Home Penalties
-        %th Away Penalties
-        %th View
-    %tbody
-      - @games.each do |game|
+  .table
+    %table
+      %thead
         %tr
-          %td
-            = game.id
-          %td
-            = game.winner
-          %td
-            = game.home_user
-          %td
-            = game.away_user
-          %td
-            = game.home_score
-          %td
-            = game.away_score
-          %td
-            - if game.home_penalty_score?
-              = game.home_penalty_score
-            - else
-              N/A
-          %td
-            - if game.away_penalty_score?
-              = game.away_penalty_score
-            - else
-              N/A
-          %td
-            = link_to "View", game
+          %th id
+          %th Winner
+          %th Home Player
+          %th Away Player
+          %th Home Score
+          %th Away Score
+          %th Home Penalties
+          %th Away Penalties
+          %th View
+      %tbody
+        - @games.each do |game|
+          %tr
+            %td
+              = game.id
+            %td
+              = game.winner
+            %td
+              = game.home_user
+            %td
+              = game.away_user
+            %td
+              = game.home_score
+            %td
+              = game.away_score
+            %td
+              - if game.home_penalty_score?
+                = game.home_penalty_score
+              - else
+                N/A
+            %td
+              - if game.away_penalty_score?
+                = game.away_penalty_score
+              - else
+                N/A
+            %td
+              = link_to "View", game
