--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require select2
+ *= require selectize
+ *= require selectize.bootstrap3
  *= require milligram
  *= require_self
  *= require games
@@ -18,6 +21,11 @@
  body  {
    background-color: #ecf0f1;
    margin: 0px;
+ }
+
+ .selectize-input {
+    background-color: #ecf0f1 !important;
+    font-size: 11px !important;
  }
 
  .centered {
