--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,14 @@
     font-size: 11px !important;
  }
 
+ td {
+  border: none;
+ }
+ 
+ .t-num {
+  text-align: right;
+ }
+
  .centered {
    position: fixed;
    top: 50%;
