--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -7,12 +7,10 @@
         %tr
           %th id
           %th Winner
-          %th Home Player
-          %th Away Player
-          %th Home Score
-          %th Away Score
-          %th Home Penalties
-          %th Away Penalties
+          %th Home
+          %th Away
+          %th.t-num Score
+          %th.t-num Penalties
           %th View
       %tbody
         - @games.each do |game|
@@ -25,19 +23,12 @@
               = game.home_user
             %td
               = game.away_user
-            %td
-              = game.home_score
-            %td
-              = game.away_score
-            %td
-              - if game.home_penalty_score?
-                = game.home_penalty_score
+            %td.t-num
+              = "#{game.home_score} - #{game.away_score}"
+            %td.t-num
+              - if game.home_penalty_score? && game.away_penalty_score?
+                = "#{game.home_penalty_score} - #{game.away_penalty_score}"
               - else
-                N/A
-            %td
-              - if game.away_penalty_score?
-                = game.away_penalty_score
-              - else
-                N/A
+                0 - 0
             %td
               = link_to "View", game
