--- a/app/views/games/table.haml
+++ b/app/views/games/table.haml
@@ -6,17 +6,17 @@
       %thead
         %tr
           %th Name
-          %th.t-num W%
-          %th.t-num W
-          %th.t-num L
-          %th.t-num T
-          %th.t-num P
-          %th.t-num P/G
-          %th.t-num GF
-          %th.t-num GA
-          %th.t-num GF/G
-          %th.t-num GA/G
-          %th.t-num GD
+          %th.t-num{:title => "Win percentage"} W%
+          %th.t-num{:title => "Wins"} W
+          %th.t-num{:title => "Losses"} L
+          %th.t-num{:title => "Draws"} D
+          %th.t-num{:title => "Points"} P
+          %th.t-num{:title => "Points per game"} P/G
+          %th.t-num{:title => "Goals for"} GF
+          %th.t-num{:title => "Goals against"} GA
+          %th.t-num{:title => "Goals for per game "} GF/G
+          %th.t-num{:title => "Goals against per game"} GA/G
+          %th.t-num{:title => "Goal differential"} GD
       %tbody
         - @users.each do |user|
           - stats = user.stats
