--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require selectize
  *= require selectize.bootstrap3
  *= require milligram
+ *= require tingle
  *= require_self
  *= require games
  */
@@ -105,7 +106,8 @@
  .navbar-dropdown-content {
   display: none;
   position: absolute;
-  right: 0;
+  /*right: 0;*/
+  z-index: 1000;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
