--- a/app/views/games/review.haml
+++ b/app/views/games/review.haml
@@ -6,13 +6,12 @@
       %thead
         %tr
           %th id
+          %th League
           %th Winner
-          %th Home Player
-          %th Away Player
-          %th Home Score
-          %th Away Score
-          %th Home Penalties
-          %th Away Penalties
+          %th Home
+          %th Away
+          %th.t-num Score
+          %th.t-num Penalties
           %th Approve
           %th Decline
       %tbody
@@ -22,26 +21,21 @@
               %td
                 = game.id
               %td
+                = game.season.league.display_name
+              %td
                 = game.winner
               %td
                 = game.home_user
               %td
                 = game.away_user
-              %td
-                = game.home_score
-              %td
-                = game.away_score
-              %td
-                - if game.home_penalty_score?
-                  = game.home_penalty_score
+              %td.t-num
+                = "#{game.home_score} - #{game.away_score}"
+              %td.t-num
+                - if game.home_penalty_score? && game.away_penalty_score?
+                  = "#{game.home_penalty_score} - #{game.away_penalty_score}"
                 - else
-                  N/A
+                  0 - 0
               %td
-                - if game.away_penalty_score?
-                  = game.away_penalty_score
-                - else
-                  N/A
+                = link_to "Approve", approve_path(:game_id => game.game_id), :method => :post
               %td
-                = link_to "Approve", approve_path(:game => game.id)
-              %td
-                = link_to "Decline", decline_path(:game => game.id)
+                = link_to "Decline", decline_path(:game_id => game.game_id), :method => :post
